# curvekit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: backfill.yml  ci.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/curvekit/: Cargo.toml
crates/curvekit-core/: Cargo.toml
crates/curvekit-core/src/: cache.rs  curve.rs  error.rs  interpolation.rs  lib.rs
crates/curvekit-core/src/sources/: mod.rs
crates/curvekit-rpc/: Cargo.toml
crates/curvekit-rpc/src/: lib.rs  methods.rs  openapi.json  rest.rs
crates/curvekit-server/: Cargo.toml
crates/curvekit-server/src/: main.rs
crates/curvekit/src/: client.rs  curve.rs  date.rs  daycount.rs  error.rs  fetcher.rs  lib.rs  tenor.rs
crates/curvekit/src/sources/: bundled.rs  effr.rs  mod.rs  obfr.rs  parquet_io.rs  sofr.rs  treasury.rs
data/: effr-2026.parquet  obfr-2026.parquet  sofr-2018.parquet  sofr-2019.parquet  sofr-2020.parquet  sofr-2021.parquet  sofr-2022.parquet  sofr-2023.parquet  sofr-2024.parquet  sofr-2025.parquet  sofr-2026.parquet  treasury-2002.parquet  treasury-2003.parquet  treasury-2004.parquet  treasury-2005.parquet  treasury-2006.parquet  treasury-2007.parquet  treasury-2008.parquet  treasury-2009.parquet  treasury-2010.parquet  treasury-2011.parquet  treasury-2012.parquet  treasury-2013.parquet  treasury-2014.parquet  treasury-2015.parquet  treasury-2016.parquet  treasury-2017.parquet  treasury-2018.parquet  treasury-2019.parquet  treasury-2020.parquet  treasury-2021.parquet  treasury-2022.parquet  treasury-2023.parquet  treasury-2024.parquet  treasury-2025.parquet  treasury-2026.parquet
docs/: api.md  architecture.md  data-sources.md
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
tests/fixtures/: sofr_empty.csv  sofr_happy.csv  treasury_empty.csv  treasury_happy.csv  treasury_partial.csv
