[workspace]
resolver = "2"

members = [
    "crates/curvekit-core",
    "crates/curvekit-rpc",
    "crates/curvekit-server",
    "sdks/rust",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Theta Gamma Systems"]
license = "Apache-2.0"
repository = "https://github.com/userFRM/curvekit"
documentation = "https://docs.rs/curvekit"

[workspace.dependencies]
# ── Core ──
anyhow = "1.0"
thiserror = "2.0"

# ── Async runtime ──
tokio = { version = "1", features = ["full"] }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# ── Async utilities ──
async-trait = "0.1"

# ── HTTP ──
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Database ──
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Web framework ──
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ── CLI ──
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
