[workspace]
resolver = "2"

members = [
    "crates/curvekit",
    "cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Theta Gamma Systems"]
license = "Apache-2.0"
repository = "https://github.com/userFRM/curvekit"
documentation = "https://docs.rs/curvekit"

[workspace.dependencies]
# ── Core ──
anyhow = "1.0"
thiserror = "2.0"

# ── Async runtime ──
tokio = { version = "1", features = ["full"] }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# ── Async utilities ──
async-trait = "0.1"

# ── HTTP ──
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
bytes = "1"
futures = "0.3"

# ── Parquet / Arrow ──
arrow = { version = "54", default-features = false, features = ["csv"] }
parquet = { version = "54", default-features = false, features = ["snap", "zstd", "arrow"] }

# ── CLI ──
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
