[package]
name = "curvekit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the curvekit risk-free rate service"
keywords = ["treasury", "sofr", "cli", "finance"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "curvekit"
path = "src/main.rs"

[dependencies]
curvekit-core = { path = "../crates/curvekit-core" }
curvekit-sdk  = { path = "../sdks/rust"            }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
