[package]
name = "curvekit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for curvekit — Treasury + SOFR parquet backfill and inspection"
keywords = ["treasury", "sofr", "cli", "finance", "parquet"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "curvekit-cli"
path = "src/main.rs"

[dependencies]
curvekit = { path = "../crates/curvekit" }

anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
