[package]
name = "curvekit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Risk-free rate fetchers, parsers, curve types, interpolation, and SQLite cache"
keywords = ["treasury", "sofr", "yield-curve", "rates", "finance"]
categories = ["finance", "api-bindings"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
async-trait.workspace = true
reqwest.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
