[package]
name = "curvekit-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 + REST handlers for curvekit rate service"
keywords = ["treasury", "sofr", "json-rpc", "rest", "finance"]
categories = ["finance", "web-programming"]

[dependencies]
curvekit-core = { path = "../curvekit-core" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
