[package]
name = "curvekit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Offline-first bundled-parquet risk-free rate library — Treasury yield curves + SOFR"
keywords = ["treasury", "sofr", "yield-curve", "rates", "parquet"]
categories = ["finance", "api-bindings"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
arrow.workspace = true
parquet.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
