[package]
name = "curvekit-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client SDK for the curvekit rate service"
keywords = ["treasury", "sofr", "client", "finance"]
categories = ["finance", "api-bindings", "web-programming"]

[dependencies]
curvekit-core = { path = "../../crates/curvekit-core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
